--- a/ansible/roles/upload_portico_jar/tasks/main.yml
+++ b/ansible/roles/upload_portico_jar/tasks/main.yml
@@ -26,6 +26,12 @@
       src: settings-admin.xml.j2
       dest: "{{ ansible_env.HOME }}/{{ paths.maven_settings_dir }}/settings.xml"
 
+- wait_for:
+    host: "{{ cpswtng_archiva }}"
+    port: 8080
+    delay: 10
+    state: started
+
 - name: Deploy portico {{ dependency_versions.portico }} to archiva
   become: false
   ignore_errors: yes
