removing the expiration settings from role and using the default one from the archiva role

--- a/ansible/roles/setup_archiva/tasks/main.yml
+++ b/ansible/roles/setup_archiva/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
-- name: change expiration setting days
-  become: true
-  xml: 
-    file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
-    value: 99999
-    xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/days
+# - name: change expiration setting days
+#   become: true
+#   xml: 
+#     file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
+#     value: 99999
+#     xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/days
 
-- name: change expiration setting enabled
-  become: true
-  xml: 
-    file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
-    value: false
-    xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/enabled
+# - name: change expiration setting enabled
+#   become: true
+#   xml: 
+#     file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
+#     value: false
+#     xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/enabled
 
-- name: restart archiva1
+- name: restart archiva
   become: true
   service: name=archiva state=restarted
 
