--- a/ansible/roles/setup_archiva/meta/main.yml
+++ b/ansible/roles/setup_archiva/meta/main.yml
@@ -54,7 +54,7 @@ galaxy_info:
 
 dependencies:
   - role: archiva
-  - role: cmprescott.xml
+  # - role: cmprescott.xml
 
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
