--- a/ansible/roles/setup_archiva/tasks/main.yml
+++ b/ansible/roles/setup_archiva/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-# - name: change expiration setting days
-#   become: true
-#   xml: 
-#     file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
-#     value: 99999
-#     xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/days
+- name: change expiration setting days
+  become: true
+  xml: 
+    file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
+    value: 99999
+    xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/days
 
-# - name: change expiration setting enabled
-#   become: true
-#   xml: 
-#     file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
-#     value: false
-#     xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/enabled
+- name: change expiration setting enabled
+  become: true
+  xml: 
+    file: "{{ archiva.install_path }}/apache-archiva-{{ archiva.version }}/conf/archiva.xml"
+    value: false
+    xpath: /configuration/redbackRuntimeConfiguration/configurationProperties/security/policy/password/expiration/enabled
 
 - name: restart archiva
   become: true
