modify to lc ucef in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: UCEF
 description: "Universal CPS Environment for Federation: A development toolset to enable scalable and composable experimentation in CPS"
 
-baseurl: "/UCEF"
+baseurl: "/ucef"
 rooturl: ""
 
 # Build settings
