--- a/_data/documents.yml
+++ b/_data/documents.yml
@@ -30,10 +30,17 @@
   md5: 
   sha512: 
   team: ucef
-- name: "Create PingPong Federation and Generate Code"
+- name: "Run PingPong Federation and Add Behavior"
   description: "This video illustrates how to use the Eclipse IDE to add behavior to the PingPong federation and run the resulting code."
   category: "videos"
   url: https://s3.amazonaws.com/nist-sgcps/UCEF/videos/CompilingEditingRunningPingPong.mp4
   md5: 
   sha512: 
   team: ucef
+ - name: "UCEF 1.0.0 Beta Release Webinar Presentation"
+  description: "This slide presentation was shown at the beta release webinar held on 9/14/2018"
+  category: "presentations"
+  url: https://s3.amazonaws.com/nist-sgcps/UCEF/presentations/UCEFBetaReleaseASPresentedUpload.pdf
+  md5: 
+  sha512: 
+  team: ucef 
